<resources>
    <string name="app_name">wordpress-mobile-app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment 1</string>
    <string name="hello_blank_fragment2">Hello blank fragment 2</string>
    <string name="hello_blank_fragment3">Hello blank fragment 3</string>
    <string name="hello_blank_fragment4">Hello blank fragment 4</string>
    <string name="post">Post</string>
    <string name="hello">hello</string>
    <string name="date">January 1, 2024</string>
    <string name="_8_hours_ago">8 hours ago</string>
    <string name="homepage">Homepage</string>
    <string name="home_page">home_page</string>
    <string name="introduction">Introduction</string>
    <string name="moreinfo1">moreinfo1</string>
    <string name="news">News</string>
    <string name="moreinfo2">moreinfo2</string>
    <string name="page">Page</string>
    <string name="to_search">to_search</string>
    <string name="go_back">go_back</string>
    <string name="published">Published</string>
    <string name="drafts">Drafts</string>
    <string name="scheduled">Scheduled</string>
    <string name="trashed">Trashed</string>
    <string name="_5_days_ago">5 days ago</string>

    <string name="khiem_pham_on_hello_world">Khiem Pham on Hello World:</string>
    <string name="nice">Nice</string>
    <string name="comment">Comment</string>
    <string name="_8_hours_ago6_days_ago">8 hours ago</string>
    <string name="khanh_Ngoc_on_hello_world">khanh ngoc on hello world\n</string>
    <string name="two">perfect\n\n</string>
    <string name="three">oh sheetttt\n\n</string>
    <string name="four">ngonlllllll\n\n</string>
    <string name="five">coming\n\n</string>
    <string name="six">comback\n\n</string>
    <string name="hai">Hai on the Hello World\n\n</string>
    <string name="huyen">Huyen anh on the hello world\n\n</string>
    <string name="vanh">Vanh on the hellp world\n\n</string>
    <string name="Viet">Viet Anh on the hello world\n\n</string>
    <string name="khiem1">Khiem on the hello world</string>
    <string name="Khanh2">Awaii on the hello world</string>
    <string name="iwill">I will comeback next week</string>
    <string name="maou">"Chua te bong toi "</string>
    <string name="cmt">yesssssssss</string>
    <string name="chuahe">beautifull</string>
    <string name="he">Kawaii on the hello world</string>
    <string name="my_profile">My Profile</string>
    <string name="first_name">First name</string>
    <string name="khiem">khiem</string>
    <string name="last_name">Last name</string>
    <string name="pham">Pham</string>
    <string name="public_display_name">Public display name</string>
    <string name="khiem_pham">khiem Pham</string>
    <string name="about_me">About me</string>
    <string name="account_settings">Account Settings</string>
    <string name="phamduckhiem03">phamduckhiem03</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="email">phamduckhiem03@gmail.com</string>
    <string name="primary_site">Primary site</string>
    <string name="web_address">Web Address</string>
    <string name="link_blog">http://banhmibunrieu.wordpress.com</string>
    <string name="change_password">Change password</string>
    <string name="close_account">Close Account</string>
    <string name="interface_language">Interface Language</string>
    <string name="interface_language_option">English(United States)</string>
    <string name="appearance">Appearance</string>
    <string name="appearance_option">System Default</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="open_device_settings">Open device settings</string>
    <string name="media">Media</string>
    <string name="optimize_images">OPtimize Images</string>
    <string name="enable_to_resize_and_compress_picture">Enable to resize and compress picture</string>
    <string name="app_settings">App Settings</string>
    <string name="maximum_image_size">Maximum Image Size</string>
    <string name="_2000px">2000px</string>
    <string name="image_quality">Image Quality</string>
    <string name="medium">medium</string>
    <string name="remove_location_from_media">Remove location from media</string>
    <string name="optimize_videos">Optimize Videos</string>
    <string name="enable_to_resize_and_compress_videos">Enable to resize and compress videos</string>
    <string name="maximum_viseo_size">Maximum Viseo Size</string>
    <string name="_720p">720p</string>
    <string name="video_quality">Video Quality</string>
    <string name="high">High</string>
    <string name="help">Help</string>
    <string name="community_forums">Community forums</string>
    <string name="get_help_from_our_group_of_volunteers">Get help from our group of volunteers.</string>
    <string name="browse_our_faq">Browse our FAQ</string>
    <string name="logs">Logs</string>
    <string name="version_25_2_1">Version 25.2.1</string>
    <string name="about_wordpress">About WordPress</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="rate_us">Rate Us</string>
    <string name="twitter">Twitter</string>
    <string name="legal_and_more">Legal and More</string>
    <string name="contribute">Contribute</string>
    <string name="wordpress">WordPress</string>
    <string name="version_25_2_1_1444">version_25_2_1 (1444)</string>
    <string name="update">Update</string>
    <string name="introductiontext">Introduction</string>
    <string name="infohomepage">Your homepage is using a Theme template and will open in the web eidtor.</string>
    <string name="days">3 days ago</string>
    <string name="create_page">Create page</string>
    <string name="empty">Empty</string>
</resources>